Tidying up, plus addition of first pass at creating a service tenant.

--- a/Solutions/Marain.TenantManagement.Specs/Data/ServiceManifests/ManifestWithMultipleConfigurationItems.json
+++ b/Solutions/Marain.TenantManagement.Specs/Data/ServiceManifests/ManifestWithMultipleConfigurationItems.json
@@ -3,12 +3,12 @@
   "serviceName": "Manifest with multiple configuration items",
   "requiredConfigurationEntries": [
     {
-      "contentType": "application/vnd.marain.tenancy.servicemanifests.azureblobstorageconfigurationentry",
+      "contentType": "application/vnd.marain.tenancy.servicemanifests.requiredconfigurationentries.azureblobstorage",
       "containerName": "operations",
       "description": "Stores the status of all current operations"
     },
     {
-      "contentType": "application/vnd.marain.tenancy.servicemanifests.cosmosdbconfigurationentry",
+      "contentType": "application/vnd.marain.tenancy.servicemanifests.requiredconfigurationentries.cosmosdb",
       "databaseName": "workflow",
       "containerName": "definitions",
       "description": "Workflow definitions"
