--- a/Solutions/Marain.TenantManagement.Specs/Data/ServiceManifests/ManifestWithConfiguration.json
+++ b/Solutions/Marain.TenantManagement.Specs/Data/ServiceManifests/ManifestWithConfiguration.json
@@ -3,7 +3,7 @@
   "serviceName": "Manifest with configuration",
   "requiredConfigurationEntries": [
     {
-      "contentType": "application/vnd.marain.tenancy.servicemanifests.azureblobstorageconfigurationentry",
+      "contentType": "application/vnd.marain.tenancy.servicemanifests.requiredconfigurationentries.azureblobstorage",
       "containerName": "operations",
       "description": "Stores the status of all current operations"
     }
