Rejig configuration entries to use the storage definitions that they will need when setting config against tenants.

--- a/Solutions/Marain.TenantManagement.Specs/Data/ServiceManifests/ManifestWithConfiguration.json
+++ b/Solutions/Marain.TenantManagement.Specs/Data/ServiceManifests/ManifestWithConfiguration.json
@@ -4,7 +4,10 @@
   "requiredConfigurationEntries": [
     {
       "contentType": "application/vnd.marain.tenancy.servicemanifests.requiredconfigurationentries.azureblobstorage",
-      "containerName": "operations",
+      "key": "operationsStore",
+      "containerDefinition": {
+        "containerName": "operations"
+      },
       "description": "Stores the status of all current operations"
     }
   ]
