--- a/Solutions/Marain.TenantManagement.Abstractions/Marain.TenantManagement.Abstractions.csproj
+++ b/Solutions/Marain.TenantManagement.Abstractions/Marain.TenantManagement.Abstractions.csproj
@@ -16,6 +16,8 @@
 
   <ItemGroup>
     <PackageReference Include="Corvus.Tenancy.Abstractions" Version="0.24.0-preview.26" />
+    <PackageReference Include="Corvus.Azure.Storage.Tenancy" Version="0.24.0-preview.26" />
+    <PackageReference Include="Corvus.Azure.Cosmos.Tenancy" Version="0.24.0-preview.26" />
     <PackageReference Include="Endjin.RecommendedPractices" Version="0.2.1">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
