--- a/Solutions/Marain.TenantManagement.Specs/Data/ServiceManifests/ManifestWithMultipleConfigurationItems.json
+++ b/Solutions/Marain.TenantManagement.Specs/Data/ServiceManifests/ManifestWithMultipleConfigurationItems.json
@@ -4,13 +4,19 @@
   "requiredConfigurationEntries": [
     {
       "contentType": "application/vnd.marain.tenancy.servicemanifests.requiredconfigurationentries.azureblobstorage",
-      "containerName": "operations",
+      "key": "operationsStore",
+      "containerDefinition": {
+        "containerName": "operations"
+      },
       "description": "Stores the status of all current operations"
     },
     {
       "contentType": "application/vnd.marain.tenancy.servicemanifests.requiredconfigurationentries.cosmosdb",
-      "databaseName": "workflow",
-      "containerName": "definitions",
+      "key": "workflowStore",
+      "containerDefinition": {
+        "databaseName": "workflow",
+        "containerName": "definitions"
+      },
       "description": "Workflow definitions"
     }
   ]
