Add ability to list required config for a tenant to enroll in a service.

--- a/Solutions/ServiceManifests/OperationsServiceManifest.json
+++ b/Solutions/ServiceManifests/OperationsServiceManifest.json
@@ -6,6 +6,7 @@
     {
       "contentType": "application/vnd.marain.tenancy.servicemanifests.requiredconfigurationentries.azureblobstorage",
       "type": "azureBlobContainerConfiguration",
+      "key": "operationsStore",
       "containerDefinition": {
         "containerName": "operations"
       },
