--- a/Solutions/ServiceManifests/WorkflowServiceManifest.json
+++ b/Solutions/ServiceManifests/WorkflowServiceManifest.json
@@ -7,6 +7,7 @@
     {
       "contentType": "application/vnd.marain.tenancy.servicemanifests.requiredconfigurationentries.cosmosdb",
       "type": "cosmosContainerConfiguration",
+      "key": "workflowStore",
       "containerDefinition": {
         "databaseName": "workflow",
         "containerName": "definitions"
@@ -16,6 +17,7 @@
     {
       "contentType": "application/vnd.marain.tenancy.servicemanifests.requiredconfigurationentries.cosmosdb",
       "type": "cosmosContainerConfiguration",
+      "key": "workflowInstanceStore",
       "containerDefinition": {
         "databaseName": "workflow",
         "containerName": "instances"
