--- a/Solutions/Marain.TenantManagement.Abstractions/Marain.TenantManagement.Abstractions.csproj
+++ b/Solutions/Marain.TenantManagement.Abstractions/Marain.TenantManagement.Abstractions.csproj
@@ -3,7 +3,7 @@
   <Import Project="$(EndjinProjectPropsPath)" Condition="$(EndjinProjectPropsPath) != ''" />
   
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
