--- a/Solutions/Marain.TenantManagement.Specs/Marain.TenantManagement.Specs.csproj
+++ b/Solutions/Marain.TenantManagement.Specs/Marain.TenantManagement.Specs.csproj
@@ -19,6 +19,7 @@
   <ItemGroup>
     <None Remove="Data\ServiceManifests\FooBarServiceManifest.json" />
     <None Remove="Data\ServiceManifests\ManifestWithConfiguration.json" />
+    <None Remove="Data\ServiceManifests\ManifestWithConfigurationWithUnknownContentType.json" />
     <None Remove="Data\ServiceManifests\ManifestWithDependencies.json" />
     <None Remove="Data\ServiceManifests\ManifestWithMultipleConfigurationItems.json" />
     <None Remove="Data\ServiceManifests\OperationsServiceManifest.json" />
@@ -27,6 +28,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <EmbeddedResource Include="Data\ServiceManifests\ManifestWithConfigurationWithUnknownContentType.json" />
     <EmbeddedResource Include="Data\ServiceManifests\ManifestWithMultipleConfigurationItems.json" />
     <EmbeddedResource Include="Data\ServiceManifests\ManifestWithConfiguration.json" />
     <EmbeddedResource Include="Data\ServiceManifests\ManifestWithDependencies.json" />
