--- a/Solutions/Marain.TenantManagement.Specs/Marain.TenantManagement.Specs.csproj
+++ b/Solutions/Marain.TenantManagement.Specs/Marain.TenantManagement.Specs.csproj
@@ -17,25 +17,25 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Remove="Data\ServiceManifests\FooBarServiceManifest.json" />
-    <None Remove="Data\ServiceManifests\ManifestWithConfiguration.json" />
-    <None Remove="Data\ServiceManifests\ManifestWithConfigurationWithUnknownContentType.json" />
-    <None Remove="Data\ServiceManifests\ManifestWithDependencies.json" />
-    <None Remove="Data\ServiceManifests\ManifestWithMultipleConfigurationItems.json" />
-    <None Remove="Data\ServiceManifests\OperationsServiceManifest.json" />
-    <None Remove="Data\ServiceManifests\SimpleManifestWithNoDependenciesOrConfiguration.json" />
-    <None Remove="Data\ServiceManifests\WorkflowServiceManifest.json" />
+    <None Remove="Data\ServiceManifests\FooBarServiceManifest.jsonp" />
+    <None Remove="Data\ServiceManifests\ManifestWithConfiguration.jsonp" />
+    <None Remove="Data\ServiceManifests\ManifestWithConfigurationWithUnknownContentType.jsonp" />
+    <None Remove="Data\ServiceManifests\ManifestWithDependencies.jsonp" />
+    <None Remove="Data\ServiceManifests\ManifestWithMultipleConfigurationItems.jsonp" />
+    <None Remove="Data\ServiceManifests\OperationsServiceManifest.jsonp" />
+    <None Remove="Data\ServiceManifests\SimpleManifestWithNoDependenciesOrConfiguration.jsonp" />
+    <None Remove="Data\ServiceManifests\WorkflowServiceManifest.jsonp" />
   </ItemGroup>
 
   <ItemGroup>
-    <EmbeddedResource Include="Data\ServiceManifests\ManifestWithConfigurationWithUnknownContentType.json" />
-    <EmbeddedResource Include="Data\ServiceManifests\ManifestWithMultipleConfigurationItems.json" />
-    <EmbeddedResource Include="Data\ServiceManifests\ManifestWithConfiguration.json" />
-    <EmbeddedResource Include="Data\ServiceManifests\ManifestWithDependencies.json" />
-    <EmbeddedResource Include="Data\ServiceManifests\FooBarServiceManifest.json" />
-    <EmbeddedResource Include="Data\ServiceManifests\OperationsServiceManifest.json" />
-    <EmbeddedResource Include="Data\ServiceManifests\SimpleManifestWithNoDependenciesOrConfiguration.json" />
-    <EmbeddedResource Include="Data\ServiceManifests\WorkflowServiceManifest.json" />
+    <EmbeddedResource Include="Data\ServiceManifests\ManifestWithConfigurationWithUnknownContentType.jsonp" />
+    <EmbeddedResource Include="Data\ServiceManifests\ManifestWithMultipleConfigurationItems.jsonp" />
+    <EmbeddedResource Include="Data\ServiceManifests\ManifestWithConfiguration.jsonp" />
+    <EmbeddedResource Include="Data\ServiceManifests\ManifestWithDependencies.jsonp" />
+    <EmbeddedResource Include="Data\ServiceManifests\FooBarServiceManifest.jsonp" />
+    <EmbeddedResource Include="Data\ServiceManifests\OperationsServiceManifest.jsonp" />
+    <EmbeddedResource Include="Data\ServiceManifests\SimpleManifestWithNoDependenciesOrConfiguration.jsonp" />
+    <EmbeddedResource Include="Data\ServiceManifests\WorkflowServiceManifest.jsonp" />
   </ItemGroup>
 
   <ItemGroup>
