Use stable tenant Ids for top level and service tenants (#15)
* Update to latest Corvus/Marain.Tenancy to use stable Ids for service tenants and client/service parent tenants.

* Tweaks and tidying up.

* Add "Marain Tenant Type" attribute against all created tenants, and use it to verify operations are being carried out on the correct types of tenant.

* Tweaks and tidying up after a pre-PR review.

* Fix doc errors

* Added ability to supply an expected name along with dependency Ids in a service manifest.

* Correct file names to jsonc

* Extra tests for new validation checks on expected service names.

Co-authored-by: Jonathan George <Jonathan.George@endjin.com>

--- a/Solutions/Marain.TenantManagement.Specs/Marain.TenantManagement.Specs.csproj
+++ b/Solutions/Marain.TenantManagement.Specs/Marain.TenantManagement.Specs.csproj
@@ -17,25 +17,25 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Remove="Data\ServiceManifests\FooBarServiceManifest.json" />
-    <None Remove="Data\ServiceManifests\ManifestWithConfiguration.json" />
-    <None Remove="Data\ServiceManifests\ManifestWithConfigurationWithUnknownContentType.json" />
-    <None Remove="Data\ServiceManifests\ManifestWithDependencies.json" />
-    <None Remove="Data\ServiceManifests\ManifestWithMultipleConfigurationItems.json" />
-    <None Remove="Data\ServiceManifests\OperationsServiceManifest.json" />
-    <None Remove="Data\ServiceManifests\SimpleManifestWithNoDependenciesOrConfiguration.json" />
-    <None Remove="Data\ServiceManifests\WorkflowServiceManifest.json" />
+    <None Remove="Data\ServiceManifests\FooBarServiceManifest.jsonc" />
+    <None Remove="Data\ServiceManifests\ManifestWithConfiguration.jsonc" />
+    <None Remove="Data\ServiceManifests\ManifestWithConfigurationWithUnknownContentType.jsonc" />
+    <None Remove="Data\ServiceManifests\ManifestWithDependencies.jsonc" />
+    <None Remove="Data\ServiceManifests\ManifestWithMultipleConfigurationItems.jsonc" />
+    <None Remove="Data\ServiceManifests\OperationsServiceManifest.jsonc" />
+    <None Remove="Data\ServiceManifests\SimpleManifestWithNoDependenciesOrConfiguration.jsonc" />
+    <None Remove="Data\ServiceManifests\WorkflowServiceManifest.jsonc" />
   </ItemGroup>
 
   <ItemGroup>
-    <EmbeddedResource Include="Data\ServiceManifests\ManifestWithConfigurationWithUnknownContentType.json" />
-    <EmbeddedResource Include="Data\ServiceManifests\ManifestWithMultipleConfigurationItems.json" />
-    <EmbeddedResource Include="Data\ServiceManifests\ManifestWithConfiguration.json" />
-    <EmbeddedResource Include="Data\ServiceManifests\ManifestWithDependencies.json" />
-    <EmbeddedResource Include="Data\ServiceManifests\FooBarServiceManifest.json" />
-    <EmbeddedResource Include="Data\ServiceManifests\OperationsServiceManifest.json" />
-    <EmbeddedResource Include="Data\ServiceManifests\SimpleManifestWithNoDependenciesOrConfiguration.json" />
-    <EmbeddedResource Include="Data\ServiceManifests\WorkflowServiceManifest.json" />
+    <EmbeddedResource Include="Data\ServiceManifests\ManifestWithConfigurationWithUnknownContentType.jsonc" />
+    <EmbeddedResource Include="Data\ServiceManifests\ManifestWithMultipleConfigurationItems.jsonc" />
+    <EmbeddedResource Include="Data\ServiceManifests\ManifestWithConfiguration.jsonc" />
+    <EmbeddedResource Include="Data\ServiceManifests\ManifestWithDependencies.jsonc" />
+    <EmbeddedResource Include="Data\ServiceManifests\FooBarServiceManifest.jsonc" />
+    <EmbeddedResource Include="Data\ServiceManifests\OperationsServiceManifest.jsonc" />
+    <EmbeddedResource Include="Data\ServiceManifests\SimpleManifestWithNoDependenciesOrConfiguration.jsonc" />
+    <EmbeddedResource Include="Data\ServiceManifests\WorkflowServiceManifest.jsonc" />
   </ItemGroup>
 
   <ItemGroup>
