--- a/Solutions/Marain.TenantManagement.Abstractions/Marain.TenantManagement.Abstractions.csproj
+++ b/Solutions/Marain.TenantManagement.Abstractions/Marain.TenantManagement.Abstractions.csproj
@@ -15,9 +15,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Corvus.Tenancy.Abstractions" Version="0.24.0-preview.36" />
-    <PackageReference Include="Corvus.Azure.Storage.Tenancy" Version="0.24.0-preview.36" />
-    <PackageReference Include="Corvus.Azure.Cosmos.Tenancy" Version="0.24.0-preview.36" />
+    <PackageReference Include="Corvus.Tenancy.Abstractions" Version="0.24.0-142-remove-storage-configurations.1" />
+    <PackageReference Include="Corvus.Azure.Storage.Tenancy" Version="0.24.0-142-remove-storage-configurations.1" />
+    <PackageReference Include="Corvus.Azure.Cosmos.Tenancy" Version="0.24.0-142-remove-storage-configurations.1" />
     <PackageReference Include="Endjin.RecommendedPractices" Version="0.3.0">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
