Enabled unenrollment from CLI

--- a/Solutions/Marain.TenantManagement.Cli/appsettings.template.json
+++ b/Solutions/Marain.TenantManagement.Cli/appsettings.template.json
@@ -1,4 +1,10 @@
 ﻿{
+  "Logging": {
+    "LogLevel": {
+      "Default": "Debug"
+    }
+  },
+
   // If running with a local tenancy service, point TenancyClient:TenancyServiceBaseUri at the localhost address for that
   // and set the ResourceIdForMsiAuthentication to an empty string.
   "TenancyClient:TenancyServiceBaseUri": "https://mardevtenancy.azurewebsites.net/",
