--- a/Solutions/Marain.TenantManagement.Cli/Marain.TenantManagement.Cli.csproj
+++ b/Solutions/Marain.TenantManagement.Cli/Marain.TenantManagement.Cli.csproj
@@ -6,8 +6,17 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <Nullable>enable</Nullable>
-    <IsPackable>false</IsPackable>
     <AssemblyName>marain</AssemblyName>
+    <IsPackable>true</IsPackable>
+    <PackAsTool>true</PackAsTool>
+    <ToolCommandName>marain</ToolCommandName>
+  </PropertyGroup>
+
+  <PropertyGroup>
+    <PackageLicenseExpression>AGPL-3.0-or-later</PackageLicenseExpression>
+    <PackageDescription>Management CLI for Marain, allowing tenants to be created and enrolled into services.</PackageDescription>
+    <PackageTags>Marain</PackageTags>
+    <PackageReleaseNotes></PackageReleaseNotes>
   </PropertyGroup>
 
   <ItemGroup>
