--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -30,3 +30,4 @@ jobs:
           ENDJIN_AZURESERVICESAUTHCONNECTIONSTRING: $(Endjin_AzureServicesAuthConnectionString)
           ENDJIN_TENANCYSERVICEBASEURI: $(Endjin_TenancyServiceBaseUri)
           ENDJIN_TENANCYSERVICERESOUCEIDFORMSIAUTHENTICATION: $(Endjin_TenancyServiceResourceIdForMsiAuthentication)
+    netSdkVersion: '3.x'
