Add support for table storage config in service manifests and enrollment.

--- a/Solutions/Marain.TenantManagement.Specs/Data/ServiceManifests/ManifestWithMultipleConfigurationItems.jsonc
+++ b/Solutions/Marain.TenantManagement.Specs/Data/ServiceManifests/ManifestWithMultipleConfigurationItems.jsonc
@@ -19,6 +19,14 @@
         "containerName": "definitions"
       },
       "description": "Workflow definitions"
+    },
+    {
+      "contentType": "application/vnd.marain.tenancy.servicemanifests.requiredconfigurationentries.azuretablestorage",
+      "key": "auditStore",
+      "containerDefinition": {
+        "tableName": "audit"
+      },
+      "description": "Stores audit logs"
     }
   ]
 }
