--- a/Solutions/Marain.TenantManagement.Specs/Marain.TenantManagement.Specs.csproj
+++ b/Solutions/Marain.TenantManagement.Specs/Marain.TenantManagement.Specs.csproj
@@ -68,8 +68,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Compile Update="Features\TenantManagement\AddConfiguration.feature.cs">
-      <DependentUpon>AddConfiguration.feature</DependentUpon>
+    <Compile Update="Features\TenantManagement\AddOrUpdateStorageConfiguration.feature.cs">
+      <DependentUpon>AddOrUpdateStorageConfiguration.feature</DependentUpon>
     </Compile>
   </ItemGroup>
 
@@ -80,7 +80,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <SpecFlowFeatureFiles Update="Features\TenantManagement\AddConfiguration.feature">
+    <SpecFlowFeatureFiles Update="Features\TenantManagement\AddOrUpdateStorageConfiguration.feature">
       <Visible>$(UsingMicrosoftNETSdk)</Visible>
       <CodeBehindFile>%(RelativeDir)%(Filename).feature$(DefaultLanguageSourceExtension)</CodeBehindFile>
     </SpecFlowFeatureFiles>
