--- a/Solutions/Marain.TenantManagement.Abstractions/Marain.TenantManagement.Abstractions.csproj
+++ b/Solutions/Marain.TenantManagement.Abstractions/Marain.TenantManagement.Abstractions.csproj
@@ -22,6 +22,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="2.2.0" />
   </ItemGroup>
 
 </Project>
