--- a/Solutions/Marain.Services.Tenancy.Testing/Marain.Services.Tenancy.Testing.csproj
+++ b/Solutions/Marain.Services.Tenancy.Testing/Marain.Services.Tenancy.Testing.csproj
@@ -20,8 +20,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="2.2.0" />
-    <PackageReference Include="SpecFlow" Version="3.3.30" />
-    <PackageReference Include="Corvus.SpecFlow.Extensions" Version="0.6.0" />
+    <PackageReference Include="Corvus.Testing.SpecFlow" Version="1.1.1" />
   </ItemGroup>
 
   <ItemGroup>
