--- a/Solutions/Marain.Services.Tenancy.Testing/Marain.Services.Tenancy.Testing.csproj
+++ b/Solutions/Marain.Services.Tenancy.Testing/Marain.Services.Tenancy.Testing.csproj
@@ -3,7 +3,7 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-
+    <IsPackable>true</IsPackable>
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
@@ -15,12 +15,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Corvus.Testing.SpecFlow" Version="1.3.2" />
     <PackageReference Include="Endjin.RecommendedPractices" Version="1.2.0">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="3.1.13" />
-    <PackageReference Include="Corvus.Testing.SpecFlow.NUnit" Version="1.3.2" />
   </ItemGroup>
 
   <ItemGroup>
