--- a/Solutions/Marain.TenantManagement.Cli/Marain.TenantManagement.Cli.csproj
+++ b/Solutions/Marain.TenantManagement.Cli/Marain.TenantManagement.Cli.csproj
@@ -4,7 +4,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
     <AssemblyName>marain</AssemblyName>
     <IsPackable>true</IsPackable>
