--- a/Solutions/Marain.TenantManagement.Abstractions/Marain.TenantManagement.Abstractions.csproj
+++ b/Solutions/Marain.TenantManagement.Abstractions/Marain.TenantManagement.Abstractions.csproj
@@ -15,12 +15,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Corvus.Azure.Cosmos.Tenancy" Version="2.0.13" />
     <PackageReference Include="Corvus.Tenancy.Abstractions" Version="3.2.0" />
     <PackageReference Include="Endjin.RecommendedPractices.GitHub" Version="2.1.0">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="6.0.1" />
   </ItemGroup>
 
 </Project>
