--- a/Solutions/Marain.TenantManagement.Azure.BlobStorage/Marain.TenantManagement.Azure.BlobStorage.csproj
+++ b/Solutions/Marain.TenantManagement.Azure.BlobStorage/Marain.TenantManagement.Azure.BlobStorage.csproj
@@ -9,7 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Corvus.Storage.Azure.BlobStorage" Version="1.2.0" />
+    <PackageReference Include="Corvus.Storage.Azure.BlobStorage.Tenancy" Version="3.2.0" />
     <PackageReference Include="Endjin.RecommendedPractices.GitHub" Version="2.1.0">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
