--- a/Solutions/Marain.TenantManagement.Specs/Data/ServiceManifests/SimpleManifestWithNoDependenciesOrConfiguration.jsonc
+++ b/Solutions/Marain.TenantManagement.Specs/Data/ServiceManifests/SimpleManifestWithNoDependenciesOrConfiguration.jsonc
@@ -1,5 +1,5 @@
 {
-  "contentType": "application/vnd.marain.tenancy.servicemanifests.servicemanifest",
+  "contentType": "application/vnd.marain.tenancy.servicemanifests.servicemanifest.v3",
   "wellKnownTenantGuid": "b4dd52e4-a6cd-4e7b-842f-059528a23153",
   "serviceName": "Simple manifest with no dependencies or configuration"
 }
