--- a/Solutions/ServiceManifests/OperationsServiceManifest.jsonc
+++ b/Solutions/ServiceManifests/OperationsServiceManifest.jsonc
@@ -5,12 +5,9 @@
   "serviceName": "Operations Control v1",
   "requiredConfigurationEntries": [
     {
-      "contentType": "application/vnd.marain.tenancy.servicemanifests.requiredconfigurationentries.azureblobstorage",
+      "contentType": "application/vnd.marain.tenancy.servicemanifests.requiredconfigurationentries.azureblobstorage.v3",
       "type": "azureBlobContainerConfiguration",
-      "key": "operationsStore",
-      "containerDefinition": {
-        "containerName": "operations"
-      },
+      "key": "MarainOperations:BlobContainerConfiguration:operations",
       "description": "Stores the status of all current operations"
     }
   ]
