WIP - add some V2 legacy support tests

--- a/Solutions/Marain.TenantManagement.Specs/Data/ServiceManifests/LegacyV2/OperationsServiceManifest.jsonc
+++ b/Solutions/Marain.TenantManagement.Specs/Data/ServiceManifests/LegacyV2/OperationsServiceManifest.jsonc
@@ -11,7 +11,7 @@
   ],
   "requiredConfigurationEntries": [
     {
-      "contentType": "application/vnd.marain.tenancy.servicemanifests.requiredconfigurationentries.azureblobstorage.v3",
+      "contentType": "application/vnd.marain.tenancy.servicemanifests.requiredconfigurationentries.azureblobstorage",
       "key": "operationsStore",
       "containerDefinition": {
         "containerName": "operations"
